# omnibus

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic_pubsub.rs  simple.rs
src/: bus.rs  error.rs  event.rs  filter.rs  lib.rs
tests/: bus_tests.rs
